# OpusClip

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PROJECT_PROGRESS.md  Project Constitution.docx  README.md  docker-compose.yml  opusclip_v2_1_final.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: api.md  architecture.md  configuration.md  release-checklist.md
examples/: .gitkeep  batch_csv.py  custom_provider.py
fonts/: OFL.txt  README.md
notebooks/: opusclip_clip_selection_debug.ipynb  opusclip_debug.ipynb  opusclip_demo.ipynb
specs/001-production-audit-refactor/: audit-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/opusclip/: __init__.py  __main__.py  cache.py  cli.py  config.py  context.py  exceptions.py  fonts.py  input_validator.py  metrics.py  pipeline.py  provider_factory.py  security.py  subprocess_utils.py  temp_manager.py
tests/: __init__.py  conftest.py  manual_validation_checklist.md  test_imports.py
tests/integration/: test_cli_integration.py  test_pipeline_construction.py  test_pipeline_integration.py
tests/unit/: test_ass_builder.py  test_config.py  test_exceptions.py  test_font_manager.py  (+8 more)
(+32 files in other folders)
