[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opusclip"
dynamic = ["version"]
description = "Production-Grade AI Automatic Short-Video Pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ABo-EsMaiL"}
]
dependencies = [
    "faster-whisper>=1.0.0",
    "mediapipe>=0.10.9",
    "opencv-python-headless>=4.9.0",
    "openai>=1.12.0",
    "yt-dlp>=2023.12.30",
    "numpy>=1.26.4",
    "torch>=2.0.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3.0"
]

[project.scripts]
opusclip = "opusclip.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "opusclip.__version__.__version__"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
